Fixed shift upon refresh, added missing mimetype

--- a/src/httpserver/style.css
+++ b/src/httpserver/style.css
@@ -123,6 +123,7 @@ div#state {
 }
 div#changed {
   padding: 0;
+	height: 23px;
 }
 div#main {
   text-align: left;
